// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package find_user_by_email;

service FindUserByEmailService {
  rpc push_email_hash(PushEmailHashRequest) returns (PushEmailHashResponse) {}
  rpc get_server_from_email_hash(GetServerFromEmailHashRequest) returns (GetServerFromEmailHashResponse) {}
}

// The request message containing the user's name.
message PushEmailHashRequest {
  string email_hash = 1;
  string server = 2;
}

// The response message containing the greetings
message PushEmailHashResponse {
  string status = 1;
}

message GetServerFromEmailHashRequest {
  string email_hash = 1;
}

message Server {
  string address = 1;
}

message GetServerFromEmailHashResponse {
  repeated Server server_list = 1;
}
